--- a/enchant/templates/default/enchant_site.erb
+++ b/enchant/templates/default/enchant_site.erb
@@ -1,4 +1,4 @@
-upstream spooky_unicorn {
+upstream enchant_unicorn {
   # This is the socket we configured in unicorn.rb
   server unix:/tmp/sockets/unicorn.sock; 
 }
@@ -19,7 +19,7 @@ server {
     # If you don't find the filename in the static files
     # Then request it from the unicorn server
     if (!-f $request_filename) {
-      proxy_pass http://spooky_unicorn;
+      proxy_pass http://enchant_unicorn;
       break;
     }
   }
